<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="parse_app_id">R6IOvMMG2EG4m6C1IG3axXiaN91xPKX2PxUsEGku</string>
    <string name="parse_client_key">Bh3yQzOPdIeHac4fzuT4KjMuJMTmkb6c3s5oq2AQ</string>

    <string name="app_name">lahacks</string>
    <string name="username_hint">Name</string>
    <string name="password_hint">Password</string>
    <string name="email_hint">Email Address</string>
    <string name="register_text">Register</string>
    <string name="login_text">Login</string>
    <string name="title_activity_tutor">tutorActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_google_login">GoogleLogin</string>
    <string name="title_activity_local_tutor_activity">local_tutor_activity</string>
    <string name="title_activity_local_tutor">LocalTutorActivity</string>
</resources>
