<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginTop="165dp"
    >

    <EditText
        android:id="@+id/email"
        android:layout_width="190dp"
        android:layout_height="28dp"
        android:inputType= "textEmailAddress"
        android:layout_centerHorizontal="true"
        android:textSize="13dp"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:layout_marginLeft="15dp"
        android:background="@drawable/backwithborder"
        android:hint = "@string/email_hint"
        android:textColorHint="#FFFFFF"/>

    <EditText
        android:id="@+id/password"
        android:layout_width="190dp"
        android:layout_height="28dp"
        android:inputType="textPassword"
        android:layout_below="@id/email"
        android:textSize="13dp"
        android:layout_alignLeft="@id/email"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        android:paddingTop="dp"
        android:layout_marginTop="6dp"
        android:gravity="center"
        android:background="@drawable/backwithborder"
        android:hint="@string/password_hint"
        android:textColorHint="#FFFFFF"/>

    <Button
        android:id="@+id/login_button"
        android:layout_width="200dp"
        android:layout_height="35dp"
        android:layout_below="@id/password"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:layout_marginTop="15dp"
        android:paddingTop="5dp"
        android:text="@string/login_text"/>

    <Button
        android:id="@+id/register_button"
        android:layout_width="200dp"
        android:layout_height="35dp"
        android:layout_below="@id/login_button"
        android:layout_alignLeft="@id/login_button"
        android:gravity="center"
        android:paddingTop="5dp"
        android:layout_marginTop="4dp"
        android:text="@string/register_text"/>

</RelativeLayout>