<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/registration"
    >
    <EditText
        android:id="@+id/username"
        android:layout_width="190dp"
        android:layout_height="28dp"
        android:inputType= "text"
        android:layout_centerHorizontal="true"
        android:textSize="13dp"
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_marginTop="100dp"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        android:textColorHint="#FFFFFF"
        android:background="@drawable/backwithborder"
        android:hint = "@string/username_hint"/>
    <EditText
        android:id="@+id/password"
        android:layout_width="190dp"
        android:layout_height="28dp"
        android:inputType="textPassword"
        android:layout_below="@id/username"
        android:layout_alignLeft="@id/username"
        android:hint="@string/password_hint"
        android:textSize="13dp"
        android:gravity="center"
        android:layout_marginTop="6dp"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        android:textColorHint="#FFFFFF"
        android:background="@drawable/backwithborder"
        />

    <EditText
        android:id="@+id/email"
        android:layout_width="190dp"
        android:layout_height="28dp"
        android:inputType="textEmailAddress"
        android:layout_below="@id/password"
        android:layout_alignLeft="@id/password"
        android:hint="@string/email_hint"
        android:textSize="13dp"
        android:gravity="center"
        android:layout_marginTop="6dp"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        android:textColorHint="#FFFFFF"
        android:background="@drawable/backwithborder"
        />

    <Button
        android:id="@+id/register_button"
        android:layout_width="200dp"
        android:layout_height="35dp"
        android:layout_below="@id/email"
        android:layout_alignLeft="@id/email"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:layout_marginTop="15dp"
        android:paddingTop="5dp"
        android:text="@string/register_text"/>


</RelativeLayout>